se agrega consulta de todas las obras
